app/javascript/pages/inviteTo/invite-to.module.scss
.submitYourInfo {
  * {
    line-height: var(--seeds-line-height-relaxed);
  }
  a:not(.responseIcon) {
    text-decoration: underline;
  }
  ul {
    margin-left: var(--seeds-spacer-label);
  }
  .submitYourInfoPage {
    display: flex;
    overflow-x: clip;
    flex-direction: row;
    max-width: var(--bloom-width-5xl);
    margin: 0 auto;
    @media (max-width: theme("screens.sm")) {
      flex-direction: column;
    }
  }
  .submitYourInfoMain {
    flex: 1;
    padding: 0 var(--seeds-spacer-container) var(--seeds-s10) 0;

    @media (max-width: 1024px) {
      padding: var(--seeds-spacer-container);
    }
    @media (max-width: theme("screens.sm")) {
      padding: var(--seeds-spacer-content) var(--seeds-spacer-content) 0 var(--seeds-spacer-content);
      &.I2A {
        padding-bottom: var(--seeds-s10);
      }
    }
    h2 {
      font-size: var(--seeds-font-size-2xl);
      padding-top: var(--seeds-s10);
    }
    h3 {
      font-size: var(--seeds-font-size-xl);
      padding-top: var(--seeds-spacer-header);
    }
    .listHeading {
      padding: 0;
    }
    button {
      margin: var(--seeds-spacer-text) 0;
    }
  }
  .inviteToHeader {
    * {
      margin: var(--seeds-spacer-text) 0;
    }
    img {
      max-width: 100%;
      height: auto;
      display: block;
      padding-top: var(--seeds-spacer-content);

      padding-bottom: var(--seeds-spacer-text);
      @media (max-width: theme("screens.sm")) {
        padding-top: 0;
      }
    }
  }
  .submitYourInfoSidebar {
    display: flex;
    flex-direction: column;
    flex: 0 0 33.333%;
    gap: var(--seeds-spacer-text);
    @media (max-width: theme("screens.sm")) {
      padding: var(--seeds-spacer-section) var(--seeds-spacer-content) var(--seeds-s10)
        var(--seeds-spacer-content);
      border-left: none;
      width: 100%;
      box-sizing: border-box;
    }
    section {
      border: none;
    }
    h3 {
      margin: var(--seeds-spacer-text) 0;
    }
    padding: var(--seeds-spacer-section) 0 0 var(--seeds-spacer-content);
    border-left: 1px solid var(--seeds-color-gray-450);
  }
  .infoSubSection {
    display: flex;
    flex-direction: column;
    @media (max-width: theme("screens.sm")) {
      padding-bottom: 0;
    }
    div button {
      margin-bottom: 0 !important;
    }
    h2 {
      font-size: var(--seeds-font-size-2xl);
    }
    h3 {
      margin-bottom: var(--seeds-spacer-text) 0;
    }
    ol {
      list-style-type: decimal;
      margin-left: var(--seeds-spacer-header);
    }
    .accordionContent {
      padding: var(--seeds-spacer-content);
      border: 2px solid var(--seeds-color-gray-400);
      border-top: none;
      border-radius: 0 0 var(--seeds-rounded-lg) var(--seeds-rounded-lg);
    }
    .iconList li {
      list-style-type: none;
      background-image: url("/images/icon-document.svg");
      background-repeat: no-repeat;
      padding: var(--seeds-spacer-text) 0 0 var(--seeds-spacer-content);
      background-position: 0 var(--seeds-spacer-text);
    }
    ul {
      list-style-type: disc;
      margin-left: var(--seeds-spacer-content);
      margin-top: var(--seeds-spacer-text);
    }
    ol {
      list-style-type: decimal;
      margin-left: var(--seeds-spacer-content);
      margin-top: var(--seeds-spacer-text);
    }
    p:not(.messageBanner p):not(.accordionContent p) {
      margin-top: var(--seeds-spacer-header);
    }
    .actionButton {
      align-self: flex-start;
      margin: var(--seeds-spacer-content) 0;
    }
  }
  .expandableContent {
    padding: var(--seeds-spacer-section) 0 var(--seeds-spacer-header) 0;
    button {
      font-size: var(--seeds-font-size-base);
      text-align: left;
    }
  }
  .whatToDoList {
    .loadingOverlay {
      --loading-state-height: none;
      padding: var(--seeds-s1) 0;
      width: var(--seeds-width-xs);
      :global {
        .loading-state-spinner {
          padding: var(--seeds-s3);
        }
      }
    }
  }
  .submitYourInfoIcons {
    display: flex;
    flex-direction: column;
    gap: var(--seeds-spacer-text);
    margin-top: var(--seeds-spacer-text);
  }
  .submitYourInfoBox {
    background-color: var(--seeds-color-gray-200);
    padding: var(--seeds-spacer-content);

    margin-top: var(--seeds-spacer-content);
    h3 {
      padding-top: 0;
    }
    @media (max-width: theme("screens.sm")) {
      margin-bottom: var(--seeds-s10);
    }
  }
}

.messageBanner {
  margin-top: var(--seeds-spacer-header);
}

.responseIcon {
  display: flex;
  min-width: 0;
  gap: var(--seeds-spacer-text);
  overflow-wrap: anywhere;
  word-break: break-word;
}

.responseCard {
  @media (max-width: theme("screens.sm")) {
    border: none;
  }
  .responseHeader {
    padding: var(--seeds-spacer-container);
    text-align: center;
    @media (max-width: theme("screens.sm")) {
      text-align: left;
      padding: var(--seeds-spacer-section);
    }
  }
  .responseSubtitle {
    margin-top: var(--seeds-spacer-label);
    text-align: left;
  }
  .responseSection {
    display: flex;
    flex-direction: column;
    padding: var(--seeds-spacer-section);
    background: var(--seeds-color-primary-lighter);
    gap: var(--seeds-spacer-text);
  }
}

.listingCard {
  text-align: center;
  margin-bottom: var(--seeds-spacer-label);
  @media (max-width: theme("screens.sm")) {
    border: none;
    border-radius: 0;
    margin-bottom: 0;
  }
  h1 {
    color: var(--seeds-color-white);
  }
  .listingHeader {
    padding: var(--seeds-spacer-header);
    background: var(--seeds-color-primary);
  }
  .listingSection {
    padding: var(--seeds-spacer-text) !important;
    @media (max-width: theme("screens.sm")) {
      background: var(--seeds-color-primary-lighter);
    }
  }
}

